# ssunoti

./: README.md  plan.md
.claude/commands/: commit.md  handover.md  make-document.md  question.md
ssunoti_server/: .gitignore  CLAUDE.md  SSUPATH_URL_ANALYSIS.md  memo.md  pyproject.toml
ssunoti_server/.claude/commands/: commit.md  update-docstring.md
ssunoti_server/crawling_ssupath/: request_login.py
ssunoti_server/docs/: firestroe_design.md
ssunoti_server/docs/code/: crawler.py.md  notice_detail_html_structure.md  notice_list_html_structure.md  request_login.py.md
ssunoti_server/docs/guide/: beautifulsoup.md  claude-commands-guide.md  debug-get-detail-semester.md  debug-get-detail-whitespace.md  pytest_guide.md  requests-guide.md  ssu-path-request-headers.md  ssu-sso-login-with-requests.md
ssunoti_server/handover/: 2026-04-02-1200.md
ssunoti_server/src/crawling/: __init__.py  ssupath_crawling.py
ssunoti_server/src/ssunoti/: crawler.py  utils.py
ssunoti_server/tests/: test_all_notices.py  test_login.py  test_notices.py  test_request.py
